Handle authentication fail

--- a/src/result.html
+++ b/src/result.html
@@ -57,6 +57,9 @@
         This card is not quoted in any other cards.
       </div>
     </div>
+    <div class="authenticationFailed">
+      Please let Card Quote use your account.
+    </div>
   </div>
   <script src="./js/result.js"></script>
 </body>
