Add interactive search box when no current card is found

--- a/src/result.html
+++ b/src/result.html
@@ -44,6 +44,10 @@
 </head>
 
 <body>
+  <div class="searchBox">
+	  <input id="currentCardShortLink" value="" placeholder="Card short link"/>
+	  <a href="#" onclick="searchCardQuoteManually();">Search</a>
+  </div>
   <div id="content">
     <div>
       <span class="searchInProgress">Searching any cards quoted this card...</span>
