--- a/src/result.html
+++ b/src/result.html
@@ -6,6 +6,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://api.trello.com/1/client.js?key=0777dc859d30ca2aaacc742eec8261a6"></script>
+  <script src="https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js"></script>
 
   <style>
     .searchResultCardName {
